# BAT-Resources

kstarsStreamingDither/: .gitignore  configure.ac
kstarsStreamingDither/src/: .gitignore  Makefile.am  frame.cpp  frame.h  guider.cpp  main.cpp
kstarsStreamingDither/src/glade/: kstarsStreamingDither.glade
